
0:0:3
   Complete re-writing of the C-code for SWI interface.
   Added examples/pagerank.pl (Vitor Santos Costa).

0:0:2       2011 Dec ??
0:0:1       2011 Dec ??

   First two releases only shown to Vitor and Jan.