@@ -24,6 +24,7 @@
      real/2,
      r_char/2,
      devoff/0,
+     r_wait/0,
 	% real_type/1,
 	(<-)/2,
 	op(600,xfy,~),
@@ -39,8 +40,9 @@
      ]).
 
 :- use_module(library(shlib)).
-:- use_module(library(lists) ).
+:- use_module(library(lists)).
 :- use_module(library(apply_macros)).
+:- use_module(library(charsio)).
 
 /** <module> r..eal
 
@@ -48,14 +50,16 @@ A C-based  Prolog interface to R.
 
 ---++ Introduction
 
-This library enables the communication with an R process started as a shared library. It is the result of the
-efforts of two research groups that have worked in parallel.
-The syntactic emphasis on a minimalistic interface. A single predicate (<-/2,<-/1) channels the bulk of the interactions.
-In addition to using R as a shared library, r..eal uses the c-interfaces of SWI/Yap and R to pass objects
-in both directions. The usual mode of operation is to load Prolog values on to R variables and then
-call an R function on these values. The return value of the called function can be either placed on R variable
-or passed back to Prolog.  It has been tested extensively on current SWI and  YAP 6.3.0 on Linux machines but
-it should also compile and work on MS operating systems and Macs.
+This library enables the communication with an R process started as a shared library. 
+It is the result of the efforts of two research groups that have worked in parallel.
+The syntactic emphasis on a minimalistic interface.  A single predicate (<-/2,<-/1) channels
+the bulk of the interactions. In addition to using R as a shared library, r..eal uses
+the c-interfaces of SWI/Yap and R to pass objects in both directions.
+The usual mode of operation is to load Prolog values on to R variables and then call
+an R function on these values. The return value of the called function can be either placed
+on R variable or passed back to Prolog.  It has been tested extensively on current
+SWI and YAP on Linux machines but it should also compile and work on 
+MS operating systems and Macs.
 
 The main modes for utilising the interface are
 ==
@@ -76,16 +80,16 @@ Evaluate Rexpr and pass result to PLvar.
 
 Pass Rexpr1 <- Rexpr2 to R.
 
-Pass PLval to Rvar (using the c-interface when Rvar is numeric, list or list of 2 levels).  See data transfer below.
-
-Assign contents of Rvar to PLvar using the c-interface.
+Pass PLval to Rvar (using the c-interface when Rvar is numeric, list or list of 2 levels).
+See data transfer below.  Assign contents of Rvar to PLvar using the c-interface.
 
 ---++ Syntax
 
-There are syntactic conventions in R that make unparsable prolog code. Notably function and variable names
-are allowed to contain dots, square brackets are used to access parts of vectors and arrays and functions are allowed
-empty argument tuples. We have introduced relevant syntax which allows for easy transition between prolog
-and R. Prolog constructs are converted by the library as follows:
+There are syntactic conventions in R that make unparsable prolog code. 
+Notably function and variable names are allowed to contain dots, square brackets are used
+to access parts of vectors and arrays and functions are allowed empty argument tuples.
+We have introduced relevant syntax which allows for easy transition between prolog and R.
+Prolog constructs are converted by the library as follows:
 
 
      * =|..|= within atoms  ->  =|.|= (ex. =| as..integer(c(1,2,3)) ->  as.integer(c(1,2,3))|= )
@@ -111,11 +115,11 @@ There are two ways to pass prolog data to R. The more efficient one is by using
  Rvar <- PLval
 ==
 
-We will call this the low-level interface. It is implemented as C code and transfers via C data between R and Prolog.
-In what follows atomic PLval data are simply considered as singleton lists.
-Flat Plval lists are translated to R vectors and lists of one level of nesting to R matrices (which are 2 dimensional arrays
-in R parlance). The type of values of the vector or matrice is taken to be the type of the first data element of the Plval
-according to the following :
+We will call this the low-level interface. It is implemented as C code and transfers via C data
+between R and Prolog. In what follows atomic PLval data are simply considered as singleton lists.
+Flat Plval lists are translated to R vectors and lists of one level of nesting to R matrices
+(which are 2 dimensional arrays in R parlance). The type of values of the vector or matrice is
+taken to be the type of the first data element of the Plval according to the following :
 
      * integer -> integer
      * float   -> double
@@ -123,9 +127,10 @@ according to the following :
      * boolean -> logical
 
 Booleans are represented in prolog as true/false atoms.
-Currently arrays of aribtrary dimensions are not supported in the low-level interface. Note that in R a scalar is just a
-one element vector.  When passing non-scalars the interface will assume the type of the object is that of the first scalar 
-until it encounters something different. R..eal will currently will re-start and repopulate partial integers for floats as follows: 
+Currently arrays of aribtrary dimensions are not supported in the low-level interface.
+Note that in R a scalar is just a one element vector.  When passing non-scalars the interface will
+assume the type of the object is that of the first scalar until it encounters something different.
+R..eal will currently will re-start and repopulate partial integers for floats as follows: 
 
 ==
 r <- [1,2,3].
@@ -161,8 +166,9 @@ X = [abc, def].
 
 ==
 
-In addition Prolog data can be passed through the expression mechanism. That is, data appearing in an arbitrary
-R expression will be parsed and be part of the long string that will be passed from Prolog to R for evaluation.
+In addition Prolog data can be passed through the expression mechanism.
+That is, data appearing in an arbitrary R expression will be parsed and be part of the long
+string that will be passed from Prolog to R for evaluation.  
 This is only advisable for short data structures. For instance,
 
 ==
@@ -171,7 +177,8 @@ This is only advisable for short data structures. For instance,
           <- state.
 ==
 
-Through this interface it is more convenient to represent R chars by Prolog list of codes, as in the above example.
+Through this interface it is more convenient to represent R chars by Prolog list of codes,
+as in the above example.
 
 ---++ Examples
 
@@ -212,8 +219,7 @@ rtest :-
 	x <- rnorm(y),
      <- x11(width=5,height=3.5),
 	<- plot(x,y),
-	write( 'Press Return to continue...' ), nl,
-	read_line_to_codes( user_input, _ ),
+     r_wait,
 	<- dev..off(.),
 	Y <- y,
 	write( y(Y) ), nl,
@@ -221,11 +227,8 @@ rtest :-
 	z <- Z,
 	<- z,
 	cars <- [1, 3, 6, 4, 9],
-	% cars <- c(1, 3, 6, 4, 9),
-	write( 'Press Return to continue...' ), nl,
-	read_line_to_codes( user_input, _ ),
+     r_wait,
 	devoff.
-
 
 tut6 :-
 	d <- outer(0:9, 0:9),
@@ -255,7 +258,10 @@ With a generous stack, huge objects can be passed between the two systems.
 κρότος;~/sureal% yap -s80000 -f -g "ensure_loaded(library(real))"
 YAP 6.3.0 (x86_64-linux): Fri Nov 11 16:06:00 CET 2011
 MYDDAS version MYDDAS-0.9.1
-?- findall( I, between(1,1000000,I), Is), i <- Is, K <- i, length( K, Len ), write( len(Len) ), nl, fail.
+?- 
+   findall( I, between(1,1000000,I), Is), i <- Is, K <- i, 
+   length( K, Len ), write( len(Len) ), nl, fail.
+
 len(1000000)
 
 ==
@@ -330,7 +336,8 @@ install_in_osx :-
 % interface predicates
 
 %%	init_r.
-%	Start an R object. This is done automatically upon loading the library. We should add some checking that none exists here
+%	Start an R object. This is done automatically upon loading the library. 
+%    We should add some checking that none exists here
 %    before starting a new one. This is currently not the case.
 start_r :-
 	init_r_env,
@@ -340,14 +347,14 @@ start_r :-
 %% real( Version,  Date ).
 %          Version and release date.
 %
-real( 0:0:4, 2012/02/17 ).
+real( 0:0:5, 2012/07/18 ).
 
 %%	'<-'(+Rvar).
 %%	'<-'(+Rexpr).
 %
 %         If Rvar is an atom and a known R object, then print Rvar on R.
-%         Else treat the input as an R expression and pass it on R for interpretation. (Throws result away, if expression
-%         is not a <- expression itself).
+%         Else treat the input as an R expression and pass it on R for interpretation.
+%        (Throws result away, if expression is not a <- expression itself).
 %
 '<-'(X) :-
      r(X).
@@ -357,15 +364,16 @@ real( 0:0:4, 2012/02/17 ).
 %%	'<-'(+Rvar,+PLval).
 %%	'<-'(+PLvar,+Rvar).
 %
-%    Evaluate Rexpr and store its return value to PLvar.
+%  Evaluate Rexpr and store its return value to PLvar.
 %
-%    Pass Rexpr1 <- Rexpr2 to R.
+%  Pass Rexpr1 <- Rexpr2 to R.
 %
-%    Pass Prolog value PLval to Rvar. If PLval is a single value, flat list or list of depth 2 use the low-level interface to pass the value to an R variable (see section on data transfer).
+%  Pass Prolog value PLval to Rvar. If PLval is a single value, flat list or list of depth 2
+%  use the low-level interface to pass the value to an R variable (see section on data transfer).
 %
-%    Place value of Rvar to PLvar.
+%  Place value of Rvar to PLvar.
 %
-%    Note that all Rexpr* are first processed as described in the section about syntax before passed to R.
+%  Note that all Rexpr* are first processed as described in the section about syntax before passed to R.
 %
 '<-'(X,Y) :-
      r(X,Y ).
@@ -374,17 +382,21 @@ real( 0:0:4, 2012/02/17 ).
 %   Nickname for <-(R).
 %
 r( RvarIn ) :-
-     is_rvar( RvarIn, Rvar ),
+     is_rvar( RvarIn, _Rvar ),
+     rexpr_codes( RvarIn, RvCodes, [] ),
+     atom_codes( Rvar, RvCodes ),
      !,
      r( print(Rvar) ).
 r( R ) :-
-     rexpr_codes( R, Rcodes ),
+     rexpr_codes( R, Rcodes, TmpRs ),
      !,
-	send_r_command(Rcodes).
+	send_r_command(Rcodes),
+     maplist( r_remove, TmpRs ).
 r( R ) :-
-     catch( rterm_to_string(R,Rcodes,[]), _, fail ),
+     catch( rterm_to_string(R,TmpRs,Rcodes,[]), _, fail ),
      !,
-	send_r_command(Rcodes).
+	send_r_command(Rcodes),
+     maplist( r_remove, TmpRs ).
 r( _Other ) :-
      write( user_error, 'Cannot use input to <-/1. \n ' ), nl,
      fail.
@@ -408,16 +420,22 @@ r( RvarIn, PlrExpr ) :-
      assignment( PlrExpr, Rvar ).
 r( Plvar, Rexpr ) :-
      var(Plvar),
-     rexpr_codes( Rexpr, Rcodes ),
+     rexpr_codes( Rexpr, Rcodes, TmpRs ),
      !,
-     rexpr_to_pl_term( Rcodes, Plvar ).
+     rexpr_to_pl_term( Rcodes, Plvar ),
+     maplist( r_remove, TmpRs ).
 r( LRexpr, RRexpr ) :-
-     catch( rexpr_codes('<-'(LRexpr,RRexpr),Rcodes),_,fail),
+     catch( rexpr_codes('<-'(LRexpr,RRexpr),Rcodes,TmpRs),_,fail),
      !,
-     send_r_command( Rcodes ).
+     send_r_command( Rcodes ),
+     maplist( r_remove, TmpRs ).
 r( _Plvar, _Rexpr ) :-
      write( user_error, 'Cannot decipher modality of <-/2. \n ' ), nl,
      fail.
+
+% maybe add this to the interface ?
+r_remove( Plvar ) :-
+     <- remove( Plvar ).
 
 %%	is_rvar(+Rvar).
 %         True if Rvar is an atom and a known variable in the R environment.
@@ -431,26 +449,15 @@ is_rvar( RvarIn, Rvar ) :-
      % atom( Rvar ),
      rvar_identifier( RvarIn, Rvar ),
      r_char( Rvar, Rchar ),
-     rexpr_codes( exists(Rchar), Rcodes ),
+     rexpr_codes( exists(Rchar), Rcodes, [] ),
      %here: rexpr_to_pl_term( Rcodes, true ).
      rexpr_to_pl_term( Rcodes, Rbool ),
      Rbool == true,
-     rexpr_codes( mode(Rvar), Rmode ),
+     rexpr_codes( mode(Rvar), Rmode, [] ),
      rexpr_to_pl_term( Rmode, Plmode ),
      % atom_codes( Ratom, Rmode ),
      RvarModes  = [character,complex,list,logical,'NULL',numeric,raw],
      memberchk( Plmode, RvarModes ).
-
-/*
-%% real_type( -Type ).
-%  Enumerate or test all Types known to r..eal. These can be used as i <- Type:Values. Eg.
-%  ==
-%  i <- int:[1,2.0,3].
-%  ==
-%
-real_type( Type ) :-
-	val_type_real( Type, _ ).
-     */
 
 %%	r_char( +Atomic, +RcharAtom ).
 %   Wrap an atomic value with double quotes so it can pass as an R char type.
@@ -466,130 +473,149 @@ r_char( Rchar, Rchar ).
 devoff :-
      <- invisible('dev.off()').
 
+%% r_wait
+%         Currently only waiting for Return to be pressed.
+%
+r_wait :-
+     write( 'Press Return to continue...' ), nl,
+     read_line_to_codes( user_input, _ ).
+
 %%% end of interface predicates
 
-rexpr_codes( Rexpr, Rcodes ) :-
+rexpr_codes( Rexpr, Rcodes, [] ) :-
      number( Rexpr ),
      !,
      number_codes( Rexpr, Rcodes ).
-rexpr_codes( Rexpr, Rcodes ) :-
+rexpr_codes( Rexpr, Rcodes, [] ) :-
      atom( Rexpr ),
      !,
      atom_codes( Rexpr, Rcodes ).
-rexpr_codes( Rcodes, Rcodes ) :-
+rexpr_codes( Rcodes, Rcodes, [] ) :-
      Rcodes = [_|_],
      ascii_string( Rcodes ),
      !.
-rexpr_codes( Rterm, Rcodes ) :-
-     rterm_to_string( Rterm, Rcodes, [] ).
-     % atom_codes( Ratom, Rcodes ),
-     % write( sending(Ratom) ), nl.
+rexpr_codes( Rterm, Rcodes, TmpRs ) :-
+     rterm_to_string( Rterm, TmpRs, Rcodes, [] ).
 
 assignment( PlData, Rvar ) :-
      ( number(PlData); PlData=[_|_]; boolean_atom(PlData); PlData = @_),
      !,
      set_r_variable(Rvar, PlData).
 assignment( Rexpr, Rvar ) :-
-     rexpr_codes( '<-'(Rvar,Rexpr), Rcodes ),
+     rexpr_codes( '<-'(Rvar,Rexpr), Rcodes, TmpRs ),
      !,
-     send_r_command( Rcodes ).
-/*
-assignment( Rexpr, Rvar ) :-
-     rexpr_codes( '<-'(Rvar,Rexpr), Rcodes ),
-     send_r_command( Rcodes ).
-     */
-
+     send_r_command( Rcodes ),
+     maplist( r_remove, TmpRs ).
 
 rvar_identifier( Rvar, Rvar ) :-
     atom( Rvar ).
 rvar_identifier( A..B, Atom ) :-
-     atom(A), atom(B),
-     atomic_list_concat( [A,'.',B], Atom ).
-/* fixme
-rvar_identifier( A^B ) :-
-     % write( a(A)-b(B) ),
+     atom(A), 
+     rvar_identifier( B, Batom ),
+     atomic_list_concat( [A,'.',Batom], Atom ).
+rvar_identifier( A$B, A ) :-
+     atom(A), 
+     rvar_identifier( B, _Bid ).
+rvar_identifier( A^B, A ) :-
+     atom( A ),
      is_list( B ).
-*/
 
-
-val_type_real( int, 1 ).
-val_type_real( integer, 1 ).
-val_type_real( float, 2 ).
-val_type_real( char, 3 ).
-val_type_real( codes, 3 ).
-val_type_real( boolean, 4 ).
-val_type_real( bool, 4 ).
-
-
-rterm_to_string(V) -->
+rterm_to_string(V,[]) -->
 	{ var(V) }, !,
 	{ throw(error(instantiation_error,r_interface)) }.
-rterm_to_string(A) -->
+rterm_to_string(A,[]) -->
 	{ ascii_string(A) }, !,
         "\"", A, "\"".
-rterm_to_string(A) -->
+rterm_to_string(A,TmpRs) -->
 	% x.y
 	{ A = [Head|Tail], Tail \= [_|_], Tail \= [] }, !,
-        rterm_to_string(Head),
+     rterm_to_string(Head,TmpH),
 	".",
-	rterm_to_string(Tail).
-rterm_to_string(Array) -->
+	rterm_to_string(Tail,TmpT),
+     {append(TmpH,TmpT,TmpRs)}.
+rterm_to_string(Array,TmpRs) -->
 	{ Array = [_|_] },
-	array_to_c(Array), !.
-rterm_to_string(A) -->
+	array_to_c(Array,TmpV), !,
+     { TmpRs = [TmpV] }.
+rterm_to_string(A,[]) -->
      { functor(A,Name,1),arg(1,A,'.')}, !,
        add_atom(Name), "()".
 	% { rfunc(A) }, !, add_atom(A), "()".
-rterm_to_string(A) -->
+rterm_to_string(A,[]) -->
 	{ atom(A) }, !,
         add_atom(A).
-rterm_to_string(A) -->
+rterm_to_string(A,[]) -->
 	{ number(A) }, !,
 	add_number(A).
-rterm_to_string(A^List) -->
-	{ atom(A), is_list(List) },
+rterm_to_string(A^List,[]) -->
+	{ atom(A), is_list(List) }, !,
 	add_atom(A),
-	"[",
-	rlist_to_string(List,first),
-	"]".
+     indices_to_string( List ).
 % convert : to ., . has different associativity in Prolog.
-rterm_to_string(A1..A2) --> { atom(A1) }, !,
+rterm_to_string(A$B,TmpRs) -->
+     !,
+     rterm_to_string( A, TmpA ),
+     "$",
+     rterm_to_string( B, TmpB ),
+     {append(TmpA,TmpB,TmpRs)}.
+rterm_to_string(A1..A2,[]) --> { atom(A1) }, !,
 	add_atom(A1),
 	".",
-	rterm_to_string(A2).
+	rterm_to_string(A2,[]).
 % R function definition
-rterm_to_string((A1 :- A2)) -->
+rterm_to_string((A1 :- A2), TmpRs) -->
 	!,
-	rterm_to_string(A1),
+	rterm_to_string(A1,TmpA1),
 	" ",
-	rterm_to_string(A2).
-rterm_to_string(S) -->
+	rterm_to_string(A2,TmpA2),
+     {append(TmpA1,TmpA2,TmpRs)}.
+rterm_to_string(S,TmpRs) -->
 	{ functor(S, Na, 2), binary(Na), atom_codes(Na,NaS), arg(1,S,A1), arg(2,S,A2) }, !,
      { ( (Na=(<-);Na=(=)) -> Lft = "", Rgt = ""; Lft = "(", Rgt = ")" ) },
-     Lft, rterm_to_string(A1),
+     Lft, rterm_to_string(A1,TmpA1),
 	" ", NaS, " ",
-	rterm_to_string(A2), Rgt.
-rterm_to_string(S) -->
+	rterm_to_string(A2,TmpA2), Rgt,
+     {append(TmpA1,TmpA2,TmpRs)}.
+rterm_to_string(S,TmpRs) -->
 	{ S =.. [F|Args], F \== '.' },
 	add_atom(F),
 	"(",
-	rterms_to_string(Args, first),
+	rterms_to_string(Args, first,TmpRs),
 	")".
 
-rterms_to_string([], _) --> [].
-rterms_to_string([Arg|Args], First) -->
+rterms_to_string([], _, []) --> [].
+rterms_to_string([Arg|Args], First, TmpRs) -->
 	( { var(First) } -> "," ; "" ),
-	rterm_to_string(Arg),
-	rterms_to_string(Args, _).
+	rterm_to_string(Arg,TmpA),
+	rterms_to_string(Args, _,TmpAs),
+     {append(TmpA, TmpAs, TmpRs)}.
 
-rlist_to_string([],_) --> [].
-rlist_to_string(.('*',L),Start) -->
-	( { var(Start) } -> "," ; "" ),
-	rlist_to_string(L,_).
-rlist_to_string(.(A,L),Start) -->
-	( { var(Start) } -> "," ; "" ),
-	rterm_to_string(A),
-	rlist_to_string(L,_).
+indices_to_string( List ) -->
+	"[",
+	index_to_string( List, true ),
+	"]".
+
+index_to_string( [], _ ) --> [].
+index_to_string( [H|T], First ) --> 
+     index_element_to_string( H ),
+     index_comma( First, T ),
+     index_to_string( T, false ).
+
+index_element_to_string( List ) -->
+     { is_list(List) },
+     !,
+     indices_to_string( List ).
+index_element_to_string( Num ) -->
+     { write_to_chars(Num,Codes) },
+     Codes.
+
+index_comma( _, [] ) --> !, [].
+
+index_comma( false, _ ) -->
+     !,
+     ",".
+index_comma( true, [] )  --> [].
+
 
 ascii_string([]).
 ascii_string(.(C,Cs)) :-
@@ -614,38 +640,19 @@ add_number(El) -->
 	{ number_codes(El, Codes) },
 	Codes.
 
+array_to_c(Array,Rv) -->
+     { 
+          fresh_r_variable(Rv),
+          set_r_variable(Rv,Array),
+          atom_codes(Rv,RvCodes)
+     },
+     RvCodes.
 
-array_to_c(Array) -->
-	{ Array = [[_|_]|_] }, !,
-	/* matrix */
-        "array(c(",
-	flatten_matrix(Array, Dims, first),
-	"),dim=",
-	output_list(Dims),
-	")".
-array_to_c(Array) -->
-	output_list(Array).
-
-output_list(List) -->
-	"c(",
-	matrix_inside(List, _, first, 0, _),
-	")".
-
-flatten_matrix(Array, .(Length,Dims), Start) -->
-	matrix_inside(Array, Dims, Start, 0, Length).
-
-matrix_inside([], _, _, N, N) --> [].
-matrix_inside(.(El,Array), Dims, Start, N0, N) -->
-	matrix_el(El, Dims, Start),
-	{ N1 is N0+1 },
-	matrix_inside(Array, Dims, _, N1, N).
-
-matrix_el(Array, Dims, Start) -->
-	{ Array = [_|_] },
-	flatten_matrix(Array, Dims, Start).
-matrix_el(El, [], Start) -->
-	( { var(Start) } -> ", " ; "" ),
-	rterm_to_string(El).
+fresh_r_variable(Plv) :-
+     between( 1, 10000, I ),
+     atomic_list_concat([pl,v,I], '_', Plv),
+     \+ is_rvar(Plv),
+     !.
 
 % hmmmm
 % originally this (binary/1) included a call to exist,
